# connman-gnome

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  bootstrap  configure.ac  configure.in
applet/: Makefile.am  agent.c  agent.h  connman-applet.desktop.in  main.c  properties.c  properties.h  status.c  status.h
common/: Makefile.am  client.c  client.h  client.xml  common.h  connman-agent.c  connman-agent.h  connman-agent.xml  connman-client.c  connman-client.h  connman-dbus.c  connman-dbus.h  connman-dbus.xml  demo.c  instance.c  instance.h  instance.xml  marshal.list  test-client.c  test-config.c  test-dbus.c
icons/: Makefile.am
po/: POTFILES.in
properties/: 80203.c  80211.c  Makefile.am  advanced.c  advanced.h  cellular.c  connman-properties.desktop.in  ethernet.c  main.c  wifi.c
