
icondir = $(datadir)/icons/hicolor/22x22/apps

icon_DATA = \
	connman-type-none.png \
	connman-type-wired.png \
	connman-type-adhoc.png \
	connman-signal-01.png \
	connman-signal-02.png \
	connman-signal-03.png \
	connman-signal-04.png \
	connman-signal-05.png \
	connman-detect-01.png \
	connman-detect-02.png \
	connman-detect-03.png \
	connman-detect-04.png \
	connman-detect-05.png \
	connman-detect-06.png \
	connman-detect-07.png \
	connman-detect-08.png \
	connman-detect-09.png \
	connman-detect-10.png \
	connman-detect-11.png \
	connman-detect-12.png \
	connman-detect-13.png \
	connman-detect-14.png \
	connman-detect-15.png \
	connman-detect-16.png \
	connman-connecting-01.png \
	connman-connecting-02.png \
	connman-connecting-03.png \
	connman-connecting-04.png \
	connman-connecting-05.png \
	connman-connecting-06.png \
	connman-connecting-07.png \
	connman-connecting-08.png \
	connman-connecting-09.png \
	connman-connecting-10.png \
	connman-connecting-11.png \
	connman-connecting-12.png \
	connman-connecting-13.png \
	connman-connecting-14.png \
	connman-connecting-15.png \
	connman-connecting-16.png \
	connman-connecting-17.png \
	connman-connecting-18.png \
	connman-connecting-19.png \
	connman-connecting-20.png \
	connman-connecting-21.png \
	connman-connecting-22.png \
	connman-connecting-23.png \
	connman-connecting-24.png \
	connman-connecting-25.png \
	connman-connecting-26.png \
	connman-connecting-27.png \
	connman-connecting-28.png \
	connman-connecting-29.png \
	connman-connecting-30.png \
	connman-connecting-31.png \
	connman-connecting-32.png \
	connman-connecting-33.png \
	connman-notifier-unavailable.png

EXTRA_DIST = $(icon_DATA)

MAINTAINERCLEANFILES = Makefile.in
